edit, filter, text

--- a/about.html
+++ b/about.html
@@ -3,52 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WINGMAN SHOP Об авторе</title>
+    <title>WINGMAN SHOP О магазине</title>
     <link rel="stylesheet" href="css\about.css">
 </head>
 <body>
+    <header>
+        <img src="images/logo.jpg" alt="Логотип" class="logo">
+        <h1>WINGMAN SHOP</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="cart.html">Корзина</a></li>
+                <li><a href="add_product.html">Добавить товар</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="about.html">О магазине</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-    <div class="about-container">
-
-        <div class="header">
-            <img src="images\profile.jpg" alt="Фото автора" class="profile-pic">
-        </div>
-
-        <div class="about-content">
-            <h1>Вигурский Владислав</h1>
-            <h2>Веб-разработчик, Дизайнер и Автор</h2>
-            <p>
-                Привет! Я студент группы 6402-020302D направления ФИИТ.
-                Моя цель — создать сайт для продажи игр и цифровых игровых товаров.
-            </p>
-            <a href="https://github.com/Wingman2103">Посмотреть портфолио</a>
-
-            <button class="back-button" onclick="goBack()">Назад</button>
-        </div>
-
-        <div class="details">
-            <div>
-                <h3>Контакты</h3>
-                <p>Email: blazevigursky@gmail.com</p>
-                <p>Телефон: +7 (123) 456-78-90</p>
+        <div class="about-container">
+            <div class="header">
+                <img src="images/logo.jpg" alt="Логотип компании" class="profile-pic">
             </div>
-            <div>
-                <h3>Навыки</h3>
-                <p>HTML, CSS, JavaScript, Python</p>
-                <p>Дизайн: Figma</p>
+
+            <div class="about-content">
+                <h1>WINGMAN SHOP</h1>
+                <h2>Продажа игр и игровых товаров</h2>
+                <p>
+                    WINGMAN SHOP — это онлайн-магазин, который предлагает широкий ассортимент видеоигр и игровых аксессуаров. Мы стремимся предоставить нашим клиентам только самые лучшие продукты от ведущих мировых производителей. Независимо от того, ищете ли вы новинки игровой индустрии, эксклюзивные коллекционные издания или нуждаетесь в аксессуарах для геймеров, у нас есть все, что вам нужно.
+                </p>
+                <p>
+                    Мы работаем напрямую с крупнейшими издателями и разработчиками, чтобы предоставить нашим покупателям самые актуальные и качественные товары. Наши цены — одни из самых доступных на рынке, а наша служба поддержки всегда готова помочь вам с выбором и решить любые вопросы.
+                </p>
+                <p>
+                    В WINGMAN SHOP мы заботимся о своих клиентах, обеспечивая не только большой ассортимент игр для всех платформ, но и оперативную доставку, акции и бонусные программы для постоянных покупателей.
+                </p>
+                <p>
+                    В нашем магазине вы найдете игры для всех платформ: PlayStation, Xbox, Nintendo, а также для ПК. Мы работаем только с проверенными поставщиками, чтобы гарантировать высокое качество и отличные цены. Наша цель — сделать покупку игр удобной и безопасной, а также помочь нашим клиентам найти идеальный товар для себя.
+                </p>
+                <p>
+                    Мы также предлагаем акции и скидки на популярные игры и аксессуары, чтобы наши покупатели могли наслаждаться играми по доступным ценам. Для нас важен каждый клиент, и мы всегда рады помочь вам с выбором товара!
+                </p>
             </div>
         </div>
-
-        <div class="footer">
-            &copy; 2024 Вигурский Владислав. Все права защищены.
-        </div>
-    </div>
-    
-    <script>
-        function goBack() {
-            window.location.href = 'index.html';
-        }
-    </script>
-</main>
+    </main>
+    <footer>
+        <h2 id="contact">Контакты</h2>
+        <p>Email: support@wingmanstore.com</p>
+        <p>Телефон: +7 (123) 456-78-90</p>
+    </footer>
 </body>
 </html>
