--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li>
-                <li><a href="about.html">Об авторе</a></li>
+                <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
 
@@ -29,7 +29,6 @@
     </header>
     <main>
     <section class="product-list">
-        
     </section>
     <button id="scrollTop" title="Наверх">↑</button>
 </main>
