--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li>
-                <li><a href="about.html">Об авторе</a></li>
+                <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
 
@@ -31,11 +31,14 @@
     <main>
     <section id="home">
         <h2 id="H2">Добро пожаловать в наш магазин!</h2>
-        <p id="H2">Здесь вы найдете лучшие компьютерные игры по самым низким ценам!</p>
+        <p id="H2">Здесь вы найдете лучшие компьютерные игры по самым низким ценам! В нашем магазине представлены только самые актуальные игры для всех возрастов и предпочтений. Мы предлагаем широкий выбор игр для различных платформ, а также аксессуары и игровые товары. Все игры проходят проверку качества, и вы можете быть уверены в их подлинности.</p>
+        <p id="H2">Сделайте покупки легко и удобно! Мы предлагаем не только популярные игры, но и редкие коллекционные издания. Наши клиенты всегда получают отличные условия и акции, чтобы каждая покупка была выгодной.</p>
     </section>
 
     <section id="games">
-        <h2 id="H2">НАШИ ТОВАРЫ</h2>
+        <h2 id="H2">Популярные игры в нашем ассортименте</h2>
+        <p id="H2">Наш магазин предлагает широкий выбор популярных и востребованных игр. Мы уверены, что каждый найдет игру по своему вкусу, будь то захватывающий шутер, многопользовательская игра или увлекательная песочница. Ниже представлены наши самые продаваемые игры:</p>
+        
         <table id="gamesTable">
             <tbody>
                 <tr>
@@ -45,9 +48,9 @@
                                 <img src="images/product1_1.jpg" alt="Игра 1" class="thumbnail">
                             </div>
                             <h3>GTA V</h3>
-                            <p> Кооп-шутер с элементами криминалистики.
-                                Жанры: Шутер, мультиплеер.
-                                Цена: 1000 руб.</p>
+                            <p>Кооп-шутер с элементами криминалистики. В GTA V вы можете погрузиться в мир открытого города, брать участие в захватывающих ограблениях и проходить увлекательные сюжетные миссии. Игра захватывает динамичным геймплеем и продуманным миром.</p>
+                            <p><strong>Жанры:</strong> Шутер, мультиплеер</p>
+                            <p><strong>Цена:</strong> 1000 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -57,9 +60,9 @@
                                 <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
                             </div>
                             <h3>Minecraft</h3>
-                            <p> Кубический мир для настоящих творцов.
-                                Жанры: Песочница, открытый мир.
-                                 Цена: 2000 руб.</p>
+                            <p>Кубический мир для настоящих творцов. Minecraft — это настоящая песочница, где вы можете строить, выживать и исследовать бескрайние миры. В игре можно создавать невероятные конструкции, взаимодействовать с другими игроками и открывать новые возможности.</p>
+                            <p><strong>Жанры:</strong> Песочница, открытый мир</p>
+                            <p><strong>Цена:</strong> 2000 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -69,9 +72,9 @@
                                 <img src="images/product3_1.jpg" alt="Игра 3" class="thumbnail">
                             </div>
                             <h3>Dota 2</h3>
-                            <p>Волшебные баталии за трон.
-                                Жанры: MOBA.
-                                Цена: 500 руб.</p>
+                            <p>Dota 2 — это командная игра в жанре MOBA (Multiplayer Online Battle Arena), где два коллектива из 5 игроков сражаются друг с другом. Победа зависит от стратегического мышления, навыков и командной работы. В игре присутствует большое количество героев с уникальными способностями.</p>
+                            <p><strong>Жанры:</strong> MOBA</p>
+                            <p><strong>Цена:</strong> 500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -83,9 +86,9 @@
                                 <img src="images/product4_1.jpg" alt="Игра 4" class="thumbnail">
                             </div>
                             <h3>Counter Strike 2</h3>
-                            <p>Многопользовательский шутер от первого лица.
-                                Жанры: Шутер, мультиплеер.
-                                Цена: 1500 руб.</p>
+                            <p>Многопользовательский шутер от первого лица. Counter-Strike 2 — это одна из самых популярных игр в жанре шутеров, где вы сражаетесь с командой противников на разных картах. Игра получила широкое признание за продуманный геймплей, а также множество тактических возможностей.</p>
+                            <p><strong>Жанры:</strong> Шутер, мультиплеер</p>
+                            <p><strong>Цена:</strong> 1500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -94,10 +97,10 @@
                             <div class="image-container">
                                 <img src="images/product5_1.jpg" alt="Игра 5" class="thumbnail">
                             </div>
-                            <h3>Apex legends</h3>
-                            <p>Королевская битва в мире будущего от первого лица.
-                                Жанры: Шутер, королевская битва.
-                                Цена: 1000 руб.</p>
+                            <h3>Apex Legends</h3>
+                            <p>Королевская битва в мире будущего от первого лица. Apex Legends — это бесплатная многопользовательская игра в жанре Battle Royale, в которой игроки соревнуются за победу, используя уникальные персонажи с различными способностями.</p>
+                            <p><strong>Жанры:</strong> Шутер, королевская битва</p>
+                            <p><strong>Цена:</strong> 1000 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -107,9 +110,9 @@
                                 <img src="images/product6_1.jpg" alt="Игра 6" class="thumbnail">
                             </div>
                             <h3>Overwatch</h3>
-                            <p>Фантастический команды шутер от первого лица.
-                                Жанры: Шутер, мультиплеер.
-                                Цена: 1500 руб.</p>
+                            <p>Фантастический командный шутер от первого лица. Overwatch — это игра, где игроки выбирают персонажей с уникальными способностями и выполняют командные задачи, такие как захват территорий или защита объектов.</p>
+                            <p><strong>Жанры:</strong> Шутер, мультиплеер</p>
+                            <p><strong>Цена:</strong> 1500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
