--- a/products/product1.html
+++ b/products/product1.html
@@ -33,7 +33,11 @@
         </div>
         <div class="product-description">
             <h2>Описание</h2>
-            <p>When a young street hustler, a retired bank robber, and a terrifying psychopath find themselves entangled with some of the most frightening and deranged elements of the criminal underworld, the U.S. government, and the entertainment industry, they must pull off a series of dangerous heists to survive in a ruthless city in which they can trust nobody — least of all each other.</p>
+            <p>Grand Theft Auto V (GTA V) — это знаменитая игра в жанре экшен с открытым миром, разработанная Rockstar North и выпущенная компанией Rockstar Games. Игра впервые вышла в 2013 году и с тех пор завоевала статус одной из самых популярных и влиятельных видеоигр в истории.</p>
+            <p>Сюжет GTA V разворачивается в вымышленном городе Лос-Сантос и его окрестностях, вдохновлённых реальным Лос-Анджелесом. Игра предлагает уникальную возможность управлять сразу тремя героями: Майклом, бывшим грабителем банков, стремящимся наладить свою жизнь; Тревором, психопатом с криминальным прошлым; и Франклином, молодым парнем, мечтающим выбраться из гетто. Переключение между персонажами добавляет глубины и динамики, позволяя пережить события с разных точек зрения.</p>
+            <p>Игровой процесс GTA V сочетает элементы экшена, гонок, шутера от третьего лица и стратегического планирования. Игрокам доступен огромный открытый мир, полный разнообразных активностей: от выполнения миссий и ограблений до участия в гонках, занятий йогой, охоты или инвестиций на бирже. Лос-Сантос — это живой мир с насыщенной атмосферой, где каждый уголок скрывает что-то интересное.</p>
+            <p>Отдельного внимания заслуживает мультиплеерный режим GTA Online, где игроки могут объединяться, выполнять кооперативные задания, соревноваться или создавать собственный контент. Разработчики регулярно добавляют обновления, расширяющие возможности игры.</p>
+            <p>GTA V впечатляет своей кинематографической графикой, проработанным сюжетом, сатирическим взглядом на современное общество и масштабностью мира. Это не просто игра, а полноценный опыт, который привлекает миллионы игроков по всему миру уже более десятилетия.</p>
         </div>
         <div class="genres">
             <h3>Жанры:</h3>
