--- a/products/product2.html
+++ b/products/product2.html
@@ -33,7 +33,11 @@
             </div>
             <div class="product-description">
                 <h2>Описание</h2>
-                <p>Строй все, что только можешь вообразить, раскрывай страшные тайны и выживай ночью в потрясающей игре-песочнице. В Minecraft каждое прохождение игры уникально и за каждым углом тебя ждут незабываемые приключения. Исследуй и твори по-своему, блок за блоком, ведь этот бесконечный мир полностью в твоем распоряжении.</p>
+                <p>Minecraft — это культовая игра в жанре песочницы, разработанная компанией Mojang Studios. Игра предоставляет игрокам огромный открытый мир, состоящий из блоков, где они могут строить, разрушать, исследовать и создавать практически всё, что придёт в голову. С момента выхода в 2011 году Minecraft стал одной из самых популярных и продаваемых игр в мире.</p>
+                <p>Главной особенностью Minecraft является его процедурно генерируемый мир. Он состоит из различных биомов, таких как леса, пустыни, горы, океаны и даже альтернативные измерения — Ад и Край. Каждый мир уникален, что делает процесс исследования бесконечно увлекательным.</p>
+                <p>Minecraft также имеет мультиплеерный режим, где игроки могут строить, сражаться или вместе исследовать миры. Сообщество активно разрабатывает модификации, текстуры и карты, добавляя в игру новый контент.</p>
+                <p>Несмотря на простую графику, выполненную в пиксельном стиле, Minecraft очаровывает своей глубиной. Каждый игрок может найти в нём что-то своё: кто-то создаёт сложные механизмы с помощью редстоуна, другие строят потрясающие архитектурные шедевры, а некоторые просто наслаждаются исследованием и приключениями.</p>
+                <p>Minecraft — это больше, чем просто игра. Это платформа для творчества и самовыражения, способная вдохновить как детей, так и взрослых.</p>
             </div>
             <div class="genres">
                 <h3>Жанры:</h3>
