--- a/add_product.html
+++ b/add_product.html
@@ -17,7 +17,7 @@
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li>
-                <li><a href="about.html">Об авторе</a></li>
+                <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,7 @@
                     <option value="">Выберите</option>
                     <option value="Экшен">Экшен</option>
                     <option value="RPG">RPG</option>
-                    <option value="Симуляторы">Симуляторы</option>
+                    <option value="Шутер">Симуляторы</option>
                 </select>
                 
 
