--- a/faq.html
+++ b/faq.html
@@ -16,8 +16,8 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
-                <li><a href="faq.html">FAQ</a></li> <!-- Добавленная ссылка на FAQ -->
-                <li><a href="about.html">Об авторе</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
     </header>
@@ -40,14 +40,34 @@
             <h3>4. Есть ли скидки для студентов?</h3>
             <p>Да, студенты могут получить скидку, предоставив подтверждение своего статуса.</p>
         </div>
+        <div class="faq-item">
+            <h3>5. Как узнать, что товар в наличии?</h3>
+            <p>Информация о наличии товара отображается на странице товара. Если товар отсутствует, вы можете оформить уведомление о поступлении.</p>
+        </div>
+        <div class="faq-item">
+            <h3>6. Как сделать возврат товара?</h3>
+            <p>Возврат товара возможен в течение 14 дней после покупки, при условии, что товар не был использован и сохранил товарный вид.</p>
+        </div>
+        <div class="faq-item">
+            <h3>7. Как выбрать игру для подарка?</h3>
+            <p>Вы можете выбрать подарок, воспользовавшись фильтром по жанрам и рейтингам. Также мы предлагаем готовые подарочные наборы.</p>
+        </div>
+        <div class="faq-item">
+            <h3>8. Как следить за состоянием моего заказа?</h3>
+            <p>Для отслеживания статуса вашего заказа используйте уникальный номер отслеживания, который будет выслан на ваш email.</p>
+        </div>
+        <div class="faq-item">
+            <h3>9. Как поменять адрес доставки?</h3>
+            <p>Если заказ ещё не был отправлен, вы можете изменить адрес email доставки, связавшись с нашей службой поддержки.</p>
+        </div>
     </section>
     <button id="scrollTop" title="Наверх">↑</button>
     <script src="js\faq.js"></script>
-</main>
-<footer>
-    <h2 id="contact">Контакты</h2>
-    <p>Email: support@wingmanstore.com</p>
-    <p>Телефон: +7 (123) 456-78-90</p>
-</footer>
+    </main>
+    <footer>
+        <h2 id="contact">Контакты</h2>
+        <p>Email: support@wingmanstore.com</p>
+        <p>Телефон: +7 (123) 456-78-90</p>
+    </footer>
 </body>
 </html>
