--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="images/logo.jpg" alt="Логотип" class="logo">
-        <h1>WINGMAN SHOP</h1>
+        <p>WINGMAN SHOP</p>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
