--- a/add_product.html
+++ b/add_product.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="images/logo.jpg" alt="Логотип" class="logo">
-        <h1>ДОБАВЛЕНИЕ ТОВАРА</h1>
+        <p>WINGMAN SHOP</p>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
@@ -23,14 +23,14 @@
     </header>
     <main>
         <div class="form-container">
-            <h1>«Форма добавления товара»</h1>
+            <h1>Форма добавления товара</h1>
             <form id="addProductForm">
                 <label for="name">Наименование *</label>
                 <p class="hint">Длина должна быть от 5 до 20 символов.</p>
                 <input type="text" id="name" name="name" required minlength="5" maxlength="20" placeholder="Введите название товара">
                 
 
-                <label for="description">Описание</label>
+                <label for="description">Описание *</label>
                 <p class="hint">Длина должна быть от 20 до 100 символов.</p>
                 <textarea id="description" name="description" required minlength="20" maxlength="100" placeholder="Краткое описание товара"></textarea>
                 
