--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="images/logo.jpg" alt="Логотип" class="logo">
-    <h1>КАТАЛОГ</h1>
+    <p>WINGMAN SHOP</p>
     <nav>
         <ul>
             <li><a href="index.html">Главная</a></li>
