--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <header>
         <img src="images/logo.jpg" alt="Логотип" class="logo">
-        <h1>WINGMAN SHOP</h1>
+        <p>WINGMAN SHOP</p>
+
         <nav>
             <ul>
                 <li><a href="#home">Главная</a></li>
